feat: Updated file strucutre and styles Deleted unnecessary video file Renamed and reorganized CSS and HTML files Removed unused images

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>About Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="notes.css">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="aboutus.css">
     <link rel="icon" href="logo.png">
@@ -13,10 +13,10 @@
 	<nav class="Navbar">
         <ul class="navlist">
             <div class="logo"><img src="cuhp.jpeg" alt="logo"></div>
-            <li> <a href="index.html">Home</a></li>
-            <li> <a href="index2.html">Notes</a></li>
-            <li> <a href="index1.html">Question Papers</a></li>
-            <li> <a href="index2.html">About Us</a></li>
+            <li> <a href="home.html">Home</a></li>
+            <li> <a href="notes.html">Notes</a></li>
+            <li> <a href="questionpapers.html">Question Papers</a></li>
+            <li> <a href="aboutus.html">About Us</a></li>
             <li> <a href="aboutme.html">About Me</a></li>
         </ul>
         
@@ -53,15 +53,15 @@
             <h2>Contact Us</h2>
             <a href="#">Jobs</a>
             <a href="#">Support</a>
-            <a href="#">contact</a>
+            <a href="#">Contact</a>
             <a href="#">Sponsorship</a>
         </div>
         <div class="footer-heading footer-3">
-            <h2>Social media</h2>
-            <a href="#">Instagram</a>
-            <a href="#">Facebook</a>
-            <a href="#">youtube</a>
-            <a href="#">Twitter</a>
+            <h2>Social Media</h2>
+            <a href="https://www.instagram.com">Instagram</a>
+          <a href="https://www.facebook.com">Facebook</a>
+          <a href="https://www.youtube">Youtube</a>
+          <a href="https://www.twitter">Twitter</a>
         </div>
     </div>
  </div>  
